Fix alignment of tool icon color picker

--- a/styles/web/kendo.common.less
+++ b/styles/web/kendo.common.less
@@ -2546,6 +2546,7 @@ span.k-numerictextbox
         line-height: 0;
         margin-right: 3px;
         margin-left: 2px;
+        margin-bottom: 3px;
         background-repeat: no-repeat;
         vertical-align: middle;
         width: @grid-size;
